--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/instagram (1).png" type="image/x-icon">
     <title>Instagram</title>
 </head>
 <body>
@@ -24,16 +25,16 @@
             <div class="group">
                 <p class="not-account">Não é LarissaDezuani</p>
                 <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
+                    <span class="link-blue">Trocar de contas</span>
                     ou 
                     <span class="link-blue">Inscreva-se</span>
                 </p>
             </div>
             <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
+                <p class="get-app">Obtenha o aplicativo.</p>
                 <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                    <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo" target="_blank" class="app-download"></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3D6F904E79-FE02-4EE9-8870-0B8068AF474A%26utm_content%3Dlo%26utm_medium%3Dbadge" target="_blank" class="app-download"></a>
                 </div>
             </div>
 
