add a pagina cadastrar.html pagina de cadastros de usuarios do instagram

--- a/cadastro.html
+++ b/cadastro.html
@@ -6,29 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
-    <title>Instagram</title>
+    <title>Cadastre-se</title>
 </head>
 <body>
-    <div class="instagram-wrapper">
-        <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="Celular">
-        </div>
+    <div class="instagram-wrapper-cadastro">
+        
         <div class="instagram-continue">
-            <div class="group">
+            <div class="groupcadastro">
                 <img src="./img/instagram-logo.png" class="instagram-logo" alt="Logo do Instagram">
-                <div class="profile-photo">
-                    <img src="./img/larissa.png" alt="Foto de perfil do instagram">
-                </div>
+                <h2>Cadastre-se para ver fotos e vídeos dos seus amigos.</h2>
                 <a href="#" class="instagram-login">Continue como LarissaDezuani</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
+                <div class="titulo">
+                    <span>ou</span>
+                 </div>
+                <form>
+
+                </form>
             </div>
-            <div class="group">
-                <p class="not-account">Não é LarissaDezuani</p>
-                <p class="not-account">
-                    <span class="link-blue">Trocar de contas</span>
-                    ou 
-                    <a class="link-blue" href="cadastro.html">Inscreva-se</a>
-                </p>
+            <div class="groupcadastro">
+                <p class="not-account">Tem uma conta? <a class="link-blue">Conecte-se</a></p>               
             </div>
             <div class="get-the-app">
                 <p class="get-app">Obtenha o aplicativo.</p>
