--- a/cadastro.html
+++ b/cadastro.html
@@ -14,17 +14,26 @@
         <div class="instagram-continue">
             <div class="groupcadastro">
                 <img src="./img/instagram-logo.png" class="instagram-logo" alt="Logo do Instagram">
-                <h2>Cadastre-se para ver fotos e vídeos dos seus amigos.</h2>
-                <a href="#" class="instagram-login">Continue como LarissaDezuani</a>
+                <h3 class="cadastra-seh">Cadastre-se para ver fotos e vídeos dos seus amigos.</h3>
+                <a href="https://m.facebook.com/login.php?skip_api_login=1&api_key=124024574287414&kid_directed_site=0&app_id=124024574287414&signed_next=1&next=https%3A%2F%2Fm.facebook.com%2Fdialog%2Foauth%3Fclient_id%3D124024574287414%26redirect_uri%3Dhttps%253A%252F%252Fwww.instagram.com%252Faccounts%252Fsignup%252F%26state%3D%257B%2522fbLoginKey%2522%253A%25228fosbm13xctt7zmwt1kvsq6g6qby15367za291ibxbc61woj0ub%2522%252C%2522fbLoginReturnURL%2522%253A%2522%252Ffxcal%252Fdisclosure%252F%2522%257D%26scope%3Demail%26response_type%3Dcode%252Cgranted_scopes%26locale%3Dpt_BR%26ret%3Dlogin%26fbapp_pres%3D0%26logger_id%3D03468803-a3fa-4d40-9e1f-737358256938%26tp%3Dunspecified&cancel_url=https%3A%2F%2Fwww.instagram.com%2Faccounts%2Fsignup%2F%3Ferror%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied%26state%3D%257B%2522fbLoginKey%2522%253A%25228fosbm13xctt7zmwt1kvsq6g6qby15367za291ibxbc61woj0ub%2522%252C%2522fbLoginReturnURL%2522%253A%2522%252Ffxcal%252Fdisclosure%252F%2522%257D%23_%3D_&display=touch&locale=pt_BR&pl_dbl=0&refsrc=deprecated&_rdr" target="_blank" class="instagram-login">Entrar com o facebook</a>
                 <div class="titulo">
                     <span>ou</span>
                  </div>
-                <form>
 
+                <form>
+                    <input class="cadastrar-form" type="text" id="numero-email" name="numero-email" placeholder="Número de celular ou email">
+                    <input class="cadastrar-form" type="text" id="nome" name="nome" placeholder="Nome completo">
+                    <input class="cadastrar-form" type="text" id="username" name="username" placeholder="Nome de usuário">
+                    <input class="cadastrar-form" type="text" id="senha" name="senha" placeholder="Senha">
+                    
                 </form>
+                <p class="cadastra-se">As pessoas que usam nosso serviço podem ter carregado suas informações de contato no Instagram. <a href="https://www.facebook.com/help/instagram/261704639352628" target="_blank">Saiba mais</a></p>
+                <p class="cadastra-se">Ao se cadastrar, você concorda com nossos Termos, Política de Dados e Política de Cookies.</p>
+                <a href="" class="instagram-login">Cadastra-se</a>
+
             </div>
             <div class="groupcadastro">
-                <p class="not-account">Tem uma conta? <a class="link-blue">Conecte-se</a></p>               
+                <p class="cadastra-se">Tem uma conta? <a class="link-blue">Conecte-se</a></p>               
             </div>
             <div class="get-the-app">
                 <p class="get-app">Obtenha o aplicativo.</p>
