inserindo a pagina login com o formulario, botoes e logo do instagram

--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
-    <title>Cadastre-se</title>
+    <title>Cadastre-se - Instagram</title>
 </head>
 <body>
     <div class="instagram-wrapper-cadastro">
@@ -33,7 +33,7 @@
 
             </div>
             <div class="groupcadastro">
-                <p class="cadastra-se">Tem uma conta? <a class="link-blue">Conecte-se</a></p>               
+                <p class="cadastra-se">Tem uma conta? <a href="login.html" class="link-blue">Conecte-se</a></p>               
             </div>
             <div class="get-the-app">
                 <p class="get-app">Obtenha o aplicativo.</p>
