--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="Celular">
+            <img src="./img/celular-insta.png" alt="Celular">
         </div>
         <div class="instagram-continue">
             <div class="group">
